# codexw

./: .gitignore  AGENTS.md  README.md  TODOS.md
wrapper/: Cargo.toml
wrapper/src/: adapter_contract.rs  app.rs  app_input.rs  app_input_controls.rs  app_input_editing.rs  app_input_editor.rs  app_input_interrupt.rs  background_shells.rs  background_terminals.rs  catalog.rs  catalog_app_views.rs  catalog_backend_views.rs  catalog_connector_views.rs  catalog_feature_views.rs  catalog_file_search.rs  catalog_lists.rs  catalog_thread_list.rs  catalog_threads.rs  catalog_views.rs  client_dynamic_tools.rs  client_dynamic_tools_tests.rs  client_dynamic_tools_tests_orchestration.rs  client_dynamic_tools_tests_shells.rs  client_dynamic_tools_tests_workspace.rs  collaboration.rs  collaboration_actions.rs  collaboration_apply.rs  collaboration_preset.rs  collaboration_view.rs  commands.rs  commands_catalog.rs  commands_completion.rs  commands_completion_apply.rs  commands_completion_render.rs  commands_entries.rs  commands_entry_runtime.rs  commands_entry_session.rs  commands_entry_session_catalog.rs  commands_entry_session_modes.rs  commands_entry_thread.rs  (+191 more)
wrapper/src/app/: resume.rs  runtime.rs
wrapper/src/background_shells/: core.rs  execution.rs  recipes.rs  services.rs  snapshots.rs  tests.rs
wrapper/src/background_terminals/: render.rs  tracking.rs
wrapper/src/client_dynamic_tools/: execution.rs  specs.rs  workspace.rs
wrapper/src/client_dynamic_tools_tests_orchestration/: actions.rs  core.rs  (+1 more)
wrapper/tests/: connector_prototype_smoke.rs  doc_consistency.rs
(+582 files in other folders)
