[package]
name = "codexw"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
ctrlc = "3"
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5.3"
tempfile = "3"
unicode-segmentation = "1"
unicode-width = "0.2"
